tests/baselines/reference/duplicateNumericIndexers.errors.txt
duplicateNumericIndexers.ts(4,5): error TS2374: Duplicate index signature for type 'number'.
duplicateNumericIndexers.ts(5,5): error TS2374: Duplicate index signature for type 'number'.
duplicateNumericIndexers.ts(9,5): error TS2374: Duplicate index signature for type 'number'.
duplicateNumericIndexers.ts(10,5): error TS2374: Duplicate index signature for type 'number'.
duplicateNumericIndexers.ts(14,5): error TS2374: Duplicate index signature for type 'number'.
duplicateNumericIndexers.ts(15,5): error TS2374: Duplicate index signature for type 'number'.
duplicateNumericIndexers.ts(19,5): error TS2374: Duplicate index signature for type 'number'.
duplicateNumericIndexers.ts(20,5): error TS2374: Duplicate index signature for type 'number'.
duplicateNumericIndexers.ts(24,5): error TS2374: Duplicate index signature for type 'number'.
duplicateNumericIndexers.ts(25,5): error TS2374: Duplicate index signature for type 'number'.
duplicateNumericIndexers.ts(29,5): error TS2374: Duplicate index signature for type 'number'.
duplicateNumericIndexers.ts(30,5): error TS2374: Duplicate index signature for type 'number'.
lib.es5.d.ts(--,--): error TS2374: Duplicate index signature for type 'number'.
lib.es5.d.ts(--,--): error TS2374: Duplicate index signature for type 'number'.


==== duplicateNumericIndexers.ts (12 errors) ====
    // it is an error to have duplicate index signatures of the same kind in a type
    
    interface Number {
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
    }
    
    interface String {
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
    }
    
    interface Array<T> {
        [x: number]: T;
        ~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
        [x: number]: T;
        ~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
    }
    
    class C {
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
    }
    
    interface I {
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
    }
    
    var a: {
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
    }
    
    